# polymathes

./: .gitignore  pyproject.toml
.github/workflows/: pytest.yml
src/: errors.py  models.py
src/polymathes/: __init__.py  errors.py  models.py
src/polymathes/utils/: type.py
tests/: test_bool.py  test_dict.py  test_enum.py  test_float.py  test_int.py  test_list.py  test_none.py  test_str.py  test_submodel.py  test_tuple.py  test_union.py
